Fixed background image and opacity. Fixed remove buttons on newly added items. Fixed spacing between columns.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,78 +1,38 @@
 /* --- Background image --- */
-/* body {
-  height: 100vh;
-  background-image: url("./images/graphic-node-N-AC7tTcD-c-unsplash.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.5;
-} */
-
-/* .container {
-  position: relative;
-} */
-
-/* .background-image {
-  background-image: url("./images/graphic-node-N-AC7tTcD-c-unsplash.jpg");
-  height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-} */
-
-/* Background image: solution 1
-Problem: opacity affects whole page */
-/* .background-image-big {
-  height: 100vh;
-  width: 100vw;
-  position: relative;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-image: url("./images/graphic-node-N-AC7tTcD-c-unsplash.jpg"); */
-  /* add light green background color behind image */
-/* } */
-
-/* .overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-} */
-
-/* .overlay h1,
-.overlay h2,
-.overlay h3,
-.overlay .column-titles,
-.overlay .item-name,
-.overlay .item-price, 
-.overlay .item-subtotal,
-.overlay .total-price,
-.overlay .total-price-label {
-  color: white;
-} */
-
-/* ========= Background color, second try ==========*/
 
 body {
   height: 100vh;
+  position: relative;
+}
+
+/* Put background image in pseudo element of body so that opacity of image does not affect text in body element. */
+body::before {
+  content: "";
   background: url("./images/graphic-node-N-AC7tTcD-c-unsplash.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.9;
+  position: absolute;
 }
 
 .content-box {
+  border-radius: 10px;
   background-color: white;
   margin-top: 50px;
+  padding-bottom: 10px;
+  opacity: 0.95;
 }
-
-/* Background image, with content inside white box!*/
 
 /* --- Page headline --- */
 .shopping-cart {
   padding-bottom: 10px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px;
+  margin-top: 10px; */
   border-bottom: 1px solid lightgrey;
 }
 
@@ -86,8 +46,14 @@ body {
   margin-bottom: 15px;
 }
 
-.item-subtotal {
-  text-align: left;
+.column-titles .hidden {
+  display: none;
+}
+
+.column-titles .item-subtotal,
+.item .item-subtotal
+ {
+  text-align: center;
 }
 
 /* --- row items --- */
